<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imvFoto"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/image"
        android:maxHeight="120dp"
        android:maxWidth="120dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvItemManuf"
        android:text="@string/manufacture"
        android:layout_below="@+id/imvFoto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvItemModel"
        android:text="@string/model"
        android:layout_toRightOf="@+id/txvItemManuf" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvItemContractor"
        android:text="@string/contractor"
        android:layout_toRightOf="@+id/txvItemModel" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvItemPoliceDep"
        android:text="@string/police_department"
        android:layout_toRightOf="@+id/txvItemContractor" />
</RelativeLayout>