<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
tools:context="com.belspec.detectionoftheunexploitedvehicle.MainActivity">

<TextView
    android:id="@+id/response"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textPersonName"
    android:text="@string/name"
    android:ems="10"
    android:id="@+id/edtName"
    android:textSize="12sp" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:ems="10"
    android:id="@+id/edtPwd"
    android:text="@string/pwd"
    android:textSize="12sp" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:id="@+id/btnLogin"
    android:layout_gravity="center_horizontal"
    android:textSize="12sp" />
</LinearLayout>
