<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/side_nav_bar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.evacuation.EvacuationActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    </android.support.design.widget.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/svAll"
            android:background="@android:color/transparent">

            <LinearLayout
                android:id="@+id/rllConteiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:layout_margin="1dp">

                <include layout="@layout/detection_item" />

                <android.support.v7.widget.RecyclerView
                    style="@style/MyMaterialTheme.MyRecyclerView"
                    android:id="@+id/rvEvacuationImageList" />

                <TextView
                    android:id="@+id/txvTitleOrder"
                    style="@style/MyMaterialTheme.MyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/evacuation_order" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/MyMaterialTheme.MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:text="@string/parking_title"
                        android:id="@+id/txvParking"
                        android:gravity="center" />
                    <Spinner
                        style="@style/MyMaterialTheme.MySpinner"
                        android:id="@+id/spnParking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/idRg"
                    style="@style/MyMaterialTheme.MyRadioGroup"
                    android:layout_marginTop="20dp">

                    <RadioButton
                        android:id="@+id/rbNoCarId"
                        style="@style/MyMaterialTheme.MyRadioButton"
                        android:text="@string/no_car_id" />

                    <RadioButton
                        android:id="@+id/rbNoOwner"
                        style="@style/MyMaterialTheme.MyRadioButton"
                        android:text="@string/no_owner" />

                    <RadioButton
                        android:id="@+id/rbNoAction"
                        style="@style/MyMaterialTheme.MyRadioButton"
                        android:text="@string/no_action" />
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/llAddedPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MyMaterialTheme.MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/added_photo" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvAddedImageList"
                        style="@style/MyMaterialTheme.MyRecyclerView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnEvacuationAddImage"
                        style="@style/MyMaterialTheme.MyButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addImage" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnCreateEvacuation"
                        style="@style/MyMaterialTheme.MyButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/evacuation" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    <ImageView
        style="@style/MyMaterialTheme.MyImageView"
        android:background="@drawable/pb_loading"
        android:id="@+id/imvLoading"
        android:layout_gravity="center"
        android:contentDescription="@string/loading" />
</LinearLayout>