<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/side_nav_bar">
    <ScrollView
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/svDetection"
        android:padding="5dp"
        android:paddingBottom="30dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rllManufModel"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tilManuf"
                    android:layout_weight="1">
                    <AutoCompleteTextView
                        style="@style/MyMaterialTheme.MyEditText"
                        android:hint="@string/manufacture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/actvManufacture"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tilModel"
                    android:layout_weight="1">

                    <AutoCompleteTextView
                        style="@style/MyMaterialTheme.MyEditText"
                        android:hint="@string/model"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/actvModel"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rllCarIDStreet"
                android:layout_below="@+id/rllManufModel">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tilCarID"
                    android:layout_weight="1">
                    <EditText
                        style="@style/MyMaterialTheme.MyEditText"
                        android:hint="@string/car_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/edtCarID"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tilStreet"
                    android:layout_weight="1">

                    <EditText
                        style="@style/MyMaterialTheme.MyEditText"
                        android:hint="@string/street"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/edtStreet"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rllColorVIN"
                android:layout_below="@+id/rllCarIDStreet">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tilColor"
                    android:layout_weight="1">
                    <EditText
                        style="@style/MyMaterialTheme.MyEditText"
                        android:hint="@string/color"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/edtColor"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tilVIN"
                    android:layout_weight="1">

                    <EditText
                        style="@style/MyMaterialTheme.MyEditText"
                        android:hint="@string/vin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/edtVIN"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rllSpiners"
                android:layout_below="@+id/rllColorVIN">
                <Spinner
                    style="@style/MyMaterialTheme.MySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/spnContractor"
                    android:layout_weight="1" />
                <Spinner
                    style="@style/MyMaterialTheme.MySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/spnPoliceDepartment"
                    android:layout_weight="1"/>
            </LinearLayout>
            <RadioGroup
                style="@style/MyMaterialTheme.MyRadioGroup"
                android:id="@+id/rgType"
                android:checkedButton="@+id/rbCarTypeLight"
                android:layout_below="@+id/rllSpiners"
                android:layout_centerHorizontal="true">
                <RadioButton
                    style="@style/MyMaterialTheme.MyRadioButton"
                    android:id="@+id/rbCarTypeStrong"
                    android:text="@string/car_type_strong"/>
                <RadioButton
                    style="@style/MyMaterialTheme.MyRadioButton"
                    android:id="@+id/rbCarTypeLight"
                    android:text="@string/car_type_light"/>

            </RadioGroup>

            <Button
                style="@style/MyMaterialTheme.MyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAddImage"
                android:text="@string/addImage"
                android:layout_below="@+id/rgType"
                android:layout_alignParentLeft="true" />
            <Button
                style="@style/MyMaterialTheme.MyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:id="@+id/btnRegister"
                android:layout_below="@+id/rgType"
                android:layout_alignParentRight="true" />
            <android.support.v7.widget.RecyclerView
                style="@style/MyMaterialTheme.MyRecyclerView"
                android:id="@+id/rvImageList"
                android:layout_alignLeft="@+id/anchorStart"
                android:layout_below="@+id/btnAddImage"
                >

            </android.support.v7.widget.RecyclerView>


        </RelativeLayout>
    </ScrollView>
    <ImageView
        android:layout_below="@id/svDetection"
        android:background="@drawable/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imvLoading"
        android:layout_gravity="center"
        android:contentDescription="@string/loading"
        android:layout_centerInParent="true" />
    </RelativeLayout>