<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@drawable/side_nav_bar">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/svAll"
        android:background="@android:color/transparent"
        android:layout_below="@+id/toolbar">
        <RelativeLayout
            android:id="@+id/rllConteiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_margin="1dp">
            <RelativeLayout
                android:id="@+id/rllBox1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true">
                <TextView
                    style="@style/MyMaterialTheme.MyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@id/txvStatus"
                    android:text="@string/statusDoc"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"/>
                <ImageView
                    style="@style/MyMaterialTheme.MyImageView"
                    android:id="@+id/imvAvatar"
                    android:contentDescription="@string/photo"
                    android:layout_below="@id/txvStatus"
                    android:layout_alignParentLeft="true"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/llDocInfo"
                    android:layout_toRightOf="@id/imvAvatar"
                    android:layout_alignParentTop="true">
                    <TextView
                        style="@style/MyMaterialTheme.MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/doc_id"
                        android:id="@+id/txvDocIdTitle" />

                    <TextView
                        style="@style/MyMaterialTheme.MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txvEvacuationDocID"/>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/llDateInfo"
                    android:layout_toRightOf="@id/imvAvatar"
                    android:layout_below="@id/llDocInfo">
                    <TextView
                        style="@style/MyMaterialTheme.MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_detection"
                        android:id="@+id/txvDateDetectionTitle" />

                    <TextView
                        style="@style/MyMaterialTheme.MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txvEvacuationDateDetection" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/llManufInfo"
                    android:layout_toRightOf="@id/imvAvatar"
                    android:layout_below="@id/llDateInfo">
                    <TextView
                        style="@style/MyMaterialTheme.MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/manufacture"
                        android:id="@+id/txvManufTitle" />

                    <TextView
                        style="@style/MyMaterialTheme.MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txvEvacuationManufacture" />
                </LinearLayout>
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/llModelInfo"
                android:layout_toRightOf="@id/imvAvatar"
                android:layout_below="@id/llManufInfo">
                <TextView
                    style="@style/MyMaterialTheme.MyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model"
                    android:id="@+id/txvModelTitle" />

                <TextView
                    style="@style/MyMaterialTheme.MyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txvEvacuationModel" />
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/llCarIdInfo"
                    android:layout_toRightOf="@id/imvAvatar"
                    android:layout_below="@id/llModelInfo">
                    <TextView
                        style="@style/MyMaterialTheme.MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_id"
                        android:id="@+id/txvCarIdTitle" />

                    <TextView
                        style="@style/MyMaterialTheme.MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txvEvacuationCarID"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/llContractorInfo"
                    android:layout_toRightOf="@id/imvAvatar"
                    android:layout_below="@id/llCarIdInfo">
                    <TextView
                        style="@style/MyMaterialTheme.MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contractor"
                        android:id="@+id/txvContractorTitle" />

                    <TextView
                        style="@style/MyMaterialTheme.MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txvEvacuationContractor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/llParkingInfo"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/llContractorInfo">
                    <TextView
                        style="@style/MyMaterialTheme.MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parking_title"
                        android:id="@+id/txvParkingTitle"/>
                    <TextView
                        style="@style/MyMaterialTheme.MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txvParking"
                        android:text="@string/parking_title"/>
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    style="@style/MyMaterialTheme.MyRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rvEvacuationImageList"
                    android:layout_below="@+id/llParkingInfo">
                </android.support.v7.widget.RecyclerView>

            </RelativeLayout>
            <Button
                style="@style/MyMaterialTheme.MyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addImage"
                android:id="@+id/btnEvacuationAddImage"
                android:layout_below="@+id/rllBox1"
                android:layout_alignParentLeft="true" />

            <Button
                style="@style/MyMaterialTheme.MyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/btnSave"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/rllBox1" />

        </RelativeLayout>
    </ScrollView>

    <ImageView
        style="@style/MyMaterialTheme.MyImageView"
        android:id="@+id/imvLoading"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:contentDescription="@string/loading" />

</RelativeLayout>