<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cvUserInfo">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvUsername"
            android:textSize="12sp" />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:id="@+id/btnLogout"
            android:layout_gravity="right"
            android:textSize="12sp" />
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llControlPanel">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detection"
            android:id="@+id/btnDetection"
            android:layout_weight="2"
            android:textSize="8sp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evacuation"
            android:id="@+id/btnEvacuation"
            android:layout_weight="2"
            android:textSize="8sp" />
    </LinearLayout>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
            android:id="@+id/frgmCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            </FrameLayout>
        </android.support.v7.widget.CardView>


</LinearLayout>